--- a/index.pug
+++ b/index.pug
@@ -8,3 +8,5 @@ html(lang="en")
         link(rel="stylesheet", href="css/styles.css")
     body
         include includes/topbar
+        .wrapper
+            include includes/header
