--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -9,12 +9,42 @@ $highlight_4: #9f68d0 // purple
 
 html, body
     height: 100%
-
+*
+    box-sizing: border-box
 body
     font-family: 'Liberation Sans', sans-serif
     margin: 0
-
+    color: $main
+.wrapper
+    width: 760px  
+    max-width: 100% 
+    padding: 0 1em 3em
+    margin: 0 auto
 .border
     height: 6px
     background-image: linear-gradient(90deg, $highlight_1, $highlight_1 25%, $highlight_2 25%, $highlight_2 50%, $highlight_3 50%, $highlight_3 75%, $highlight_4 75%)
     background-size: 50%
+    margin-bottom: 2em
+.main-header
+    display: flex
+    align-items: center
+    padding: 1em
+.logo
+    width: 70px
+.logo-title
+    margin-left: 1em
+    font-size: 1.4em
+    span
+        font-weight: 300
+.categories
+    list-style: none
+    display: flex
+    padding: 0
+    margin-left: auto
+    &__link
+        padding: 0 .5em
+        font-size: .9em
+        color: $main
+        text-decoration: none
+    &__link--active
+        font-weight: 900
