add jobs to index

--- a/index.pug
+++ b/index.pug
@@ -10,3 +10,4 @@ html(lang="en")
         include includes/topbar
         .wrapper
             include includes/header
+            include includes/jobs
