--- a/index.pug
+++ b/index.pug
@@ -11,3 +11,4 @@ html(lang="en")
         .wrapper
             include includes/header
             include includes/jobs
+            include includes/loads
