may 30th not 30st

--- a/includes/jobs.pug
+++ b/includes/jobs.pug
@@ -45,4 +45,4 @@
                 li.decor San Francisco
                 li Jan 1st
         .job__category.job__category--contract Contract
-    .date May 30st
+    .date May 30th
